Flipping matcaps in opengl render crashes blender 2.8 #56183

Closed
opened 2018-07-31 22:28:30 +02:00 by Hassan · 10 comments

System Information
Windows 10 64-bit

Blender Version
blender-2.80-9b817bc1689

Short description of error
matcap crash.png
when you press the filp matcap button blender crashes

Exact steps for others to reproduce the error
create a new file
then change the render engine to opengl
in the lighting select matcap
press flip matcap

**System Information** Windows 10 64-bit **Blender Version** blender-2.80-9b817bc1689 **Short description of error** ![matcap crash.png](https://archive.blender.org/developer/F4095453/matcap_crash.png) when you press the filp matcap button blender crashes **Exact steps for others to reproduce the error** create a new file then change the render engine to opengl in the lighting select matcap press flip matcap
Author

Added subscriber: @hjsrabi

Added subscriber: @hjsrabi

#56198 was marked as duplicate of this issue

#56198 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

In #56198#523806, @mont29 wrote:
Hahaha, indeed… and we still need a .blend file to reproduce the issue, too ;)

You shouldn't need one.

  • Factory Start-up

  • Set OpenGL Render engine

  • goto the lighting panel (shown in the screenshot)

  • select MatCap

  • Flip

  • Crash

I've tried it on ubuntu and Windows and both crash

Flip MatCap.blend

> In #56198#523806, @mont29 wrote: > Hahaha, indeed… and we still need a .blend file to reproduce the issue, too ;) You shouldn't need one. - Factory Start-up - Set OpenGL Render engine - goto the lighting panel (shown in the screenshot) - select MatCap - Flip - Crash I've tried it on ubuntu and Windows and both crash [Flip MatCap.blend](https://archive.blender.org/developer/F4101142/Flip_MatCap.blend)
Campbell Barton was assigned by Bastien Montagne 2018-08-01 17:27:40 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is a 3DView-specific setting… should never be exposed in buttons window, @ideasman42 this may be in your area? Will fix crash itself (just missing poll callback), but won't fix the usability/UI issue behind it.

This is a 3DView-specific setting… should never be exposed in buttons window, @ideasman42 this may be in your area? Will fix crash itself (just missing poll callback), but won't fix the usability/UI issue behind it.

This issue was referenced by 10d1edbffb

This issue was referenced by 10d1edbffbf91094015950555495e01914e09dd9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56183
No description provided.