Fix missing poll function for flip_matcap operator (see T56183).